<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Courses</string>

    <string name="label_all_courses">All courses</string>
    <string name="label_schedule">Schedule</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_course_info">Course info</string>
    <string name="label_test">Test mode</string>

    <string name="course_details_action_unenroll">Enrolled</string>
    <string name="course_details_action_enroll">Enroll</string>
    <string name="course_details_title_description">Description</string>
    <string name="course_details_title_lecturers">Lecturers</string>
    <string name="course_details_call_lecturer">Call %1$s</string>
    <string name="course_details_mail_lecturer">Email %1$s</string>
    <string name="course_details_status_enrolled">Enrolled</string>
    <string name="course_details_status_not_enrolled">Not enrolled</string>

    <string name="courses_search">Search</string>
    <string name="courses_empty">Select a faculty and pull down to fetch courses info</string>
    <string name="courses_enrolled_empty">Enroll in a course to see it here</string>

    <string name="preference_faculties_title">Selected faculties</string>
    <plurals name="preference_faculties_summary">
        <item quantity="zero">Courses from all faculties will be shown</item>
        <item quantity="one">Courses from the %1$s faculty will be shown</item>
        <item quantity="many">Courses from the following faculties will be shown: %1$s</item>
    </plurals>
    <string name="preference_faculties_dialog_title">Faculties</string>
    <string name="preference_faculties_dialog_message">Select which faculties you want courses to be shown</string>
    <string name="preference_notification_title">Lecture notifications</string>
    <string name="preference_notification_summary_on">You will be notified when a lecture is about to start</string>
    <string name="preference_notification_summary_off">You will not be notified when a lecture is about to start</string>
    <string name="preference_notification_summary_permissions">Background location access is required to use this feature</string>
    <string name="preference_style_title">Style</string>
    <string-array name="preference_style_values">
        <item>Follow system</item>
        <item>Ambient light</item>
        <item>Force light</item>
        <item>Force dark</item>
    </string-array>
    <string name="preference_sync_freq_title">Sync frequency</string>
    <string-array name="preference_sync_frequency">
        <item>Never (manually)</item>
        <item>Every day</item>
        <item>Every 3 days</item>
        <item>Every week</item>
    </string-array>

    <string name="day_selector_previous">Previous day</string>
    <string name="day_selector_next">Next day</string>
    <string name="schedule_empty">All done for today 🎉</string>

    <string name="notification_lectures_channel">Lecture reminders</string>
    <string name="notification_lectures_message">A lecture of the "%1$s" course is about to begin! Head to %2$s at %3$s</string>
    <string name="notification_sync_channel">Data sync</string>
    <string name="notification_sync_message">Syncing data…</string>

    <string name="test_test_address">Lecture address</string>
    <string name="test_test_notification">Send test notification</string>
</resources>
